--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Ivan Dmitriesvkii <ivan.dmitrievsky@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 eventual = "^0"
+aio-pika = "^6.8.0"
+orjson = "^3.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
