--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Ivan Dmitriesvky <ivan.dmitrievsky@gmail.com>"]
 python = "^3.7"
 aio-pika = "^6.8.0"
 orjson = "^3.5.2"
-eventual = {path = "../eventual", develop = true}
+eventual = "^0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
